/*
Copyright 2023 The Paraglider Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package tagservicepb;

option go_package="github.com/paraglider-project/paraglider/pkg/kvstore/storepb";

service KVStore {
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message SetRequest {
    string key = 1;
    string value = 2;
    string cloud = 3;
    string namespace = 4;
}

message SetResponse {
}

message GetRequest {
    string key = 1;
    string cloud = 2;
    string namespace = 3;
}

message GetResponse {
    string value = 1;
}

message DeleteRequest {
    string key = 1;
    string cloud = 2;
    string namespace = 3;
}

message DeleteResponse {
}
